--- a/catalog/templates/newPhoneModel.html
+++ b/catalog/templates/newPhoneModel.html
@@ -21,7 +21,7 @@
 	<div class="col-sm-3">
 	<select name="manufacturer_list" class="form-control">
 	   <option value="">Select Manufacturer</option>
-	  {% for m,c,md in manufacturers %}
+	  {% for m_id,m,c,md in manufacturers %}
 	    
 		<option value={{m}}>{{m}}</option>
 	
@@ -104,7 +104,7 @@
 					</a>
 	</div>
 	</div>
-
+	
 </form>
 
 </div>
